--- a/manifest.json
+++ b/manifest.json
@@ -34,6 +34,7 @@
              "lib/clipboard.js",
              "content_scripts/link_hints.js",
              "content_scripts/vomnibar.js",
+             "content_scripts/scroller.js",
              "content_scripts/vimium_frontend.js"
             ],
       "css": ["vimium.css"],
